--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -45,7 +45,7 @@ about:
   description: |
     Vyper is a complete configuration solution for Python applications including 12 factor apps.
     It is designed to work within an application, and can handle all types of configuration needs and formats.
-  doc_url: https://github.com/alexferl/vyper
+  doc_url: https://github.com/alexferl/vyper/blob/v{{ version }}/README.md
   dev_url: https://github.com/alexferl/vyper
 
 extra:
